# agent-harness

./: .gitignore  AGENT.md  CHANGELOG.md  NOTICE  README.md  fix_plan.md  package-lock.json  package.json  sources.yaml  tsconfig.json  tsup.config.ts  vitest.config.ts
.github/workflows/: ci.yml  integration.yml  release.yml
.ralph/: fix_plan.md  smoke-test.md  source-licenses.md
bench/terminal-bench/: .env.example  .gitignore  README.md  pyproject.toml
bench/terminal-bench/agent_harness_adapter/: __init__.py  agent.py
bench/terminal-bench/scripts/: full.sh  smoke.sh
docs/: manual-regression-findings-2026-04-30.md  manual-regression.md  provider-integration.md  skill-authoring.md  skill-evals.md
scripts/: check-default-evals.ts
src/: index.ts
tests/: agent-framework.test.ts  agent-tools.test.ts  analytics.test.ts  approval.test.ts  auto-processor.test.ts  cli-workflows.test.ts  config.test.ts  content-filters.test.ts  context-loader.test.ts  conversation.test.ts  cost-tracker.test.ts  define-agent.test.ts  delegate.test.ts  durable-cache.test.ts  durable-engine.test.ts  durable-events.test.ts  durable-state.test.ts  durable-tools.test.ts  emotional-state.test.ts  env-discovery.test.ts  export.test.ts  file-lock.test.ts  global-setup.ts  graph.test.ts  guardrails.test.ts  harness.test.ts  health.test.ts  indexer.test.ts  instinct-learner.test.ts  intake.test.ts  intelligence.test.ts  journal.test.ts  logger.test.ts  mcp-discovery.test.ts  mcp-installer.test.ts  mcp-registry.test.ts  mcp.test.ts  metrics.test.ts  primitive-registry.test.ts  primitives.test.ts  (+29 more)
(+291 files in other folders)
